--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -7,45 +7,44 @@
     <link rel="stylesheet" href="0-styles.css">
 </head>
 <body>
+   <!-- ===== HEADER ===== -->
+<header class="header">
+    <div class="container nav-wrapper">
+        <a href="#" class="logo">
+            <img src="images/logo_headphones.png" alt="Headphones">
+        </a>
 
-    <!-- ===== HEADER ===== -->
-    <header class="header">
-        <div class="container nav-wrapper">
-            <a href="#" class="logo">
-                <img src="images/logo_headphones.png" alt="Headphones">
-            </a>
+        <!-- Hidden checkbox for menu toggle -->
+        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+        
+        <!-- Mobile menu icon -->
+        <label for="menu-toggle" class="burger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
 
-            <nav class="nav">
-                <a href="1-index.html">what we do</a>
-                <a href="2-index.html">our results</a>
-                <a href="3-index.html">contact us</a>
-            </nav>
+        <!-- Navigation -->
+        <nav class="nav">
+            <a href="1-index.html">what we do</a>
+            <a href="2-index.html">our results</a>
+            <a href="3-index.html">contact us</a>
+        </nav>
+    </div>
+</header>
 
-            <!-- Hidden checkbox for menu toggle -->
-            <input type="checkbox" id="menu-toggle" class="menu-toggle">
-            
-            <!-- Mobile menu icon  -->
-            <label for="menu-toggle" class="burger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </label>
-        </div>
-    </header>
+<!-- ===== HERO SECTION ===== -->
+<section class="hero">
+    <div class="container hero-content">
+        <h1>Lorem ipsum dolor set amet lorem ipsum</h1>
+        <p>Lorem ipsum dolor set amet lorem ipsum dolor set</p>
 
-    <!-- ===== HERO SECTION ===== -->
-    <section class="hero">
-        <div class="container hero-content">
-            <h1>Lorem ipsum dolor set amet lorem ipsum</h1>
-            <p>Lorem ipsum dolor set amet lorem ipsum dolor set</p>
+        <button class="btn">CALL TO ACTION</button>
 
-            <button class="btn">CALL TO ACTION</button>
-
-            <p class="hero-small">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            </p>
-        </div>
-    </section>
-
+        <p class="hero-small">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        </p>
+    </div>
+</section>
 </body>
 </html>
