--- a/headphones/4-index.html
+++ b/headphones/4-index.html
@@ -85,5 +85,99 @@
         </div>
     </div>
 </section>
+
+<!-- ===== OUR RESULTS SECTION ===== -->
+<section class="our-results">
+    <div class="container">
+        <h2>Our results speak for themselves</h2>
+        <p class="section-description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        </p>
+
+        <div class="results-grid">
+            <!-- Result 1 -->
+            <div class="result-item">
+                <div class="pentagon">
+                    <div class="pentagon-content">
+                        <p class="percentage">+2%</p>
+                        <p class="result-text">Lorem ipsum dolor</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Result 2 -->
+            <div class="result-item">
+                <div class="pentagon">
+                    <div class="pentagon-content">
+                        <p class="percentage">+2%</p>
+                        <p class="result-text">Lorem ipsum dolor</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Result 3 -->
+            <div class="result-item">
+                <div class="pentagon">
+                    <div class="pentagon-content">
+                        <p class="percentage">+2%</p>
+                        <p class="result-text">Lorem ipsum dolor</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Result 4 -->
+            <div class="result-item">
+                <div class="pentagon">
+                    <div class="pentagon-content">
+                        <p class="percentage">+2%</p>
+                        <p class="result-text">Lorem ipsum dolor</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<!-- ===== CONTACT US SECTION ===== -->
+<section class="contact-us">
+    <div class="container">
+        <h2>Contact us</h2>
+
+        <form class="contact-form">
+            <div class="form-group">
+                <input type="text" id="name" name="name" placeholder="Name" required>
+            </div>
+
+            <div class="form-group">
+                <input type="email" id="email" name="email" placeholder="Email" required>
+            </div>
+
+            <div class="form-group">
+                <input type="text" id="message" name="message" placeholder="Your message" required>
+            </div>
+
+            <button type="submit" class="btn">CALL TO ACTION</button>
+        </form>
+    </div>
+</section>
 </body>
+
+<footer class="site-footer">
+  <div class="footer-container">
+    <div class="footer-left">
+      <img src="images/logo.png" alt="Headphones logo" class="footer-logo">
+    </div>
+
+    <div class="footer-center">
+      <p>&copy; headphones 2023</p>
+    </div>
+
+    <div class="footer-right">
+      <a href="#"><img src="images/facebook.png" alt="Facebook icon"></a>
+      <a href="#"><img src="images/twitter.png" alt="Twitter icon"></a>
+      <a href="#"><img src="images/instagram.png" alt="Instagram icon"></a>
+    </div>
+  </div>
+</footer>
 </html>
